crates/emitter-mock/tests/snapshots/snapshots__snapshot_allof_conflict_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockBaseEntity(overrides?: Partial<Types.BaseEntity>): Types.BaseEntity {
  return {
    id: faker.number.int(),
    name: faker.lorem.word(),
    description: faker.lorem.word(),
    ...overrides,
  };
}

export function mockExtendedEntity(overrides?: Partial<Types.ExtendedEntity>): Types.ExtendedEntity {
  return {
    name: faker.person.fullName(),
    status: faker.helpers.arrayElement(['active', 'archived']),
    description: faker.lorem.word(),
    ...overrides,
  };
}

export function mockMergedEntity(overrides?: Partial<Types.MergedEntity>): Types.MergedEntity {
  return {
    id: faker.number.int(),
    name: faker.person.fullName(),
    description: faker.lorem.word(),
    status: faker.helpers.arrayElement(['active', 'archived']),
    createdAt: faker.lorem.word(),
    ...overrides,
  };
}

export function mocklistEntitiesResponse(): Types.listEntitiesResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockMergedEntity());
}
