crates/emitter-mock/tests/snapshots/snapshots__snapshot_anyof_plain_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockTextSearch(overrides?: Partial<Types.TextSearch>): Types.TextSearch {
  return {
    query: faker.lorem.word(),
    ...overrides,
  };
}

export function mockFilterSearch(overrides?: Partial<Types.FilterSearch>): Types.FilterSearch {
  return {
    filters: Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockFilter()),
    ...overrides,
  };
}

export function mockFilter(overrides?: Partial<Types.Filter>): Types.Filter {
  return {
    field: faker.lorem.word(),
    value: faker.lorem.word(),
    ...overrides,
  };
}

export function mockTextNotification(overrides?: Partial<Types.TextNotification>): Types.TextNotification {
  return {
    text: faker.lorem.word(),
    ...overrides,
  };
}

export function mockImageNotification(overrides?: Partial<Types.ImageNotification>): Types.ImageNotification {
  return {
    imageUrl: faker.lorem.word(),
    ...overrides,
  };
}

export function mockActionNotification(overrides?: Partial<Types.ActionNotification>): Types.ActionNotification {
  return {
    label: faker.lorem.word(),
    url: faker.lorem.word(),
    ...overrides,
  };
}

export function mocksearchResponse(): Types.searchResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockSearchResult());
}

export function mocklistNotificationsResponse(): Types.listNotificationsResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockNotificationContent());
}
