crates/emitter-mock/tests/snapshots/snapshots__snapshot_coverage_gaps_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockStatusCode(): Types.StatusCode {
  return faker.helpers.arrayElement([200, 201, 400, 404, 500]) as Types.StatusCode;
}

export function mockItem(overrides?: Partial<Types.Item>): Types.Item {
  return {
    id: faker.lorem.word(),
    email: faker.internet.email(),
    website: faker.internet.url(),
    createdAt: faker.lorem.word(),
    birthday: faker.lorem.word(),
    ipAddress: faker.lorem.word(),
    phone: faker.phone.number(),
    address: faker.location.streetAddress(),
    status: mockStatusCode(),
    metadata: Object.fromEntries(Array.from({ length: 2 }, () => [faker.lorem.word(), faker.lorem.word()])),
    score: faker.number.float(),
    tags: Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => faker.lorem.word()),
    name: faker.lorem.word(),
    ...overrides,
  };
}

export function mocklistItemsResponse(): Types.listItemsResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockItem());
}

export function mockgetItemResponse(): Types.getItemResponse {
  return mockItem();
}
