crates/emitter-mock/tests/snapshots/snapshots__snapshot_edge_cases_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockErrorBody(overrides?: Partial<Types.ErrorBody>): Types.ErrorBody {
  return {
    message: faker.lorem.word(),
    code: faker.number.int(),
    ...overrides,
  };
}

export function mockDeepWrapper(overrides?: Partial<Types.DeepWrapper>): Types.DeepWrapper {
  return {
    id: faker.lorem.word(),
    nested: mockDeepChild(),
    extra: faker.lorem.word(),
    ...overrides,
  };
}

export function mockDeepBase(overrides?: Partial<Types.DeepBase>): Types.DeepBase {
  return {
    id: faker.lorem.word(),
    nested: mockDeepChild(),
    ...overrides,
  };
}

export function mockGet__no-operation-idResponse(): Types.Get__no-operation-idResponse {
  return { ok: faker.datatype.boolean() };
}

export function mocknoParamSchemaResponse(): Types.noParamSchemaResponse {
  return faker.lorem.word();
}

export function mockdeeplyNestedResponse(): Types.deeplyNestedResponse {
  return mockDeepWrapper();
}

export function mocknullableArrayResponse(): Types.nullableArrayResponse {
  return faker.helpers.maybe(() => Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => faker.lorem.word()), { probability: 0.8 }) ?? null;
}

export function mockenumOnlyResponseResponse(): Types.enumOnlyResponseResponse {
  return faker.helpers.arrayElement(['active', 'inactive', 'pending']);
}

export function mockemptyObjectBodyResponse(): Types.emptyObjectBodyResponse {
  return Object.fromEntries(Array.from({ length: 2 }, () => [faker.lorem.word(), faker.lorem.word()]));
}

export function mocktextResponseResponse(): Types.textResponseResponse {
  return faker.lorem.word();
}

export function mockmultipleSuccessCodesResponse(): Types.multipleSuccessCodesResponse {
  return { id: faker.lorem.word() };
}
