crates/emitter-mock/tests/snapshots/snapshots__snapshot_error_responses_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockUser(overrides?: Partial<Types.User>): Types.User {
  return {
    id: faker.lorem.word(),
    name: faker.lorem.word(),
    email: faker.lorem.word(),
    ...overrides,
  };
}

export function mockCreateUserBody(overrides?: Partial<Types.CreateUserBody>): Types.CreateUserBody {
  return {
    name: faker.lorem.word(),
    email: faker.lorem.word(),
    ...overrides,
  };
}

export function mockValidationError(overrides?: Partial<Types.ValidationError>): Types.ValidationError {
  return {
    code: faker.lorem.word(),
    message: faker.lorem.word(),
    errors: Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => { field: faker.lorem.word(), message: faker.lorem.word() }),
    ...overrides,
  };
}

export function mockNotFoundError(overrides?: Partial<Types.NotFoundError>): Types.NotFoundError {
  return {
    code: faker.lorem.word(),
    message: faker.lorem.word(),
    ...overrides,
  };
}

export function mocklistUsersResponse(): Types.listUsersResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockUser());
}

export function mockcreateUserResponse(): Types.createUserResponse {
  return mockUser();
}

export function mockgetUserResponse(): Types.getUserResponse {
  return mockUser();
}
