crates/emitter-mock/tests/snapshots/snapshots__snapshot_header_cookie_params_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockResource(overrides?: Partial<Types.Resource>): Types.Resource {
  return {
    id: faker.lorem.word(),
    name: faker.lorem.word(),
    ...overrides,
  };
}

export function mocklistResourcesResponse(): Types.listResourcesResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockResource());
}

export function mockgetResourceResponse(): Types.getResourceResponse {
  return mockResource();
}
