crates/emitter-mock/tests/snapshots/snapshots__snapshot_inline_schemas_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockgetStatusResponse(): Types.getStatusResponse {
  return { healthy: faker.datatype.boolean(), version: faker.lorem.word(), uptime: faker.number.float() };
}

export function mockechoResponse(): Types.echoResponse {
  return { message: faker.lorem.word(), receivedAt: faker.lorem.word() };
}

export function mockgetConfigResponse(): Types.getConfigResponse {
  return { database: { host: faker.lorem.word(), port: faker.number.int() }, cache: { enabled: faker.datatype.boolean(), ttl: faker.number.int() } };
}

export function mockgetItemHistoryResponse(): Types.getItemHistoryResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => { action: faker.lorem.word(), timestamp: faker.lorem.word(), actor: faker.lorem.word() });
}
