crates/emitter-mock/tests/snapshots/snapshots__snapshot_multipart_paginated_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockItem(overrides?: Partial<Types.Item>): Types.Item {
  return {
    id: faker.lorem.word(),
    name: faker.lorem.word(),
    ...overrides,
  };
}

export function mockuploadFileResponse(): Types.uploadFileResponse {
  return { url: faker.lorem.word() };
}

export function mocklistItemsResponse(): Types.listItemsResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockItem());
}

export function mocklistCursoredResponse(): Types.listCursoredResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockItem());
}
