crates/emitter-mock/tests/snapshots/snapshots__snapshot_openapi31_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockItem(overrides?: Partial<Types.Item>): Types.Item {
  return {
    id: faker.lorem.word(),
    name: faker.lorem.word(),
    description: faker.helpers.maybe(() => faker.lorem.word(), { probability: 0.8 }) ?? null,
    metadata: faker.helpers.maybe(() => mockMetadata(), { probability: 0.8 }) ?? null,
    ...overrides,
  };
}

export function mockMetadata(overrides?: Partial<Types.Metadata>): Types.Metadata {
  return {
    key: faker.lorem.word(),
    value: faker.lorem.word(),
    ...overrides,
  };
}

export function mockStatus(): Types.Status {
  return faker.helpers.arrayElement(['active', 'inactive']) as Types.Status;
}

export function mocklistItemsResponse(): Types.listItemsResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockItem());
}

export function mockgetItemResponse(): Types.getItemResponse {
  return mockItem();
}

export function mockcreateCoordinateResponse(): Types.createCoordinateResponse {
  return mockCoordinate();
}
