crates/emitter-mock/tests/snapshots/snapshots__snapshot_petstore_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockPet(overrides?: Partial<Types.Pet>): Types.Pet {
  return {
    id: faker.number.int(),
    name: faker.lorem.word(),
    tag: faker.lorem.word(),
    status: mockPetStatus(),
    ...overrides,
  };
}

export function mockPetStatus(): Types.PetStatus {
  return faker.helpers.arrayElement(['available', 'pending', 'sold']) as Types.PetStatus;
}

export function mockCreatePetBody(overrides?: Partial<Types.CreatePetBody>): Types.CreatePetBody {
  return {
    name: faker.lorem.word(),
    tag: faker.lorem.word(),
    ...overrides,
  };
}

export function mocklistPetsResponse(): Types.listPetsResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockPet());
}

export function mockcreatePetResponse(): Types.createPetResponse {
  return mockPet();
}

export function mockgetPetResponse(): Types.getPetResponse {
  return mockPet();
}
