crates/emitter-mock/tests/snapshots/snapshots__snapshot_reserved_keywords_mock.snap
---
source: crates/emitter-mock/tests/snapshots.rs
expression: emit_mock(yaml)
---
// Generated by oa-forge. Do not edit.

import { faker } from '@faker-js/faker';
import type * as Types from './types.gen';

export function mockItemWithKeywords(overrides?: Partial<Types.ItemWithKeywords>): Types.ItemWithKeywords {
  return {
    class: faker.person.fullName(),
    type: faker.helpers.arrayElement(['widget', 'gadget']),
    interface: faker.lorem.word(),
    function: faker.lorem.word(),
    return: faker.datatype.boolean(),
    delete: faker.datatype.boolean(),
    default: faker.lorem.word(),
    new: faker.lorem.word(),
    import: faker.lorem.word(),
    export: faker.lorem.word(),
    ...overrides,
  };
}

export function mockCreateItemBody(overrides?: Partial<Types.CreateItemBody>): Types.CreateItemBody {
  return {
    class: faker.lorem.word(),
    type: faker.lorem.word(),
    ...overrides,
  };
}

export function mocklistItemsResponse(): Types.listItemsResponse {
  return Array.from({ length: faker.number.int({ min: 1, max: 3 }) }, () => mockItemWithKeywords());
}

export function mockcreateItemResponse(): Types.createItemResponse {
  return mockItemWithKeywords();
}
